--- a/templates/index.html
+++ b/templates/index.html
@@ -1,21 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Ejemplo Motor Plantillas</title>
+    <title>Login</title>
 </head>
 <body>
-    <p>Hola, {{ name }}!</p>
-
-    {% if age >= 18 %}
-    <p>Eres mayor de edad.</p>
-    {% else %}
-    <p>Eres menor de edad.</p>
-    {% endif %}
-
-    <ul>
-    {% for item in items %}
-      <li>{{ item }}</li>
-    {% endfor %}
-    </ul>
+    <p>{{ message }}</p>
 </body>
 </html>
